# TheSDGs

./: .gitignore  README.md  start-dashboard.bat  start-dashboard.ps1
OVERVIEW/: README.md  app.py  requirements.txt
OVERVIEW/data/processed/: cleaning_report.csv  entity_crosswalk.csv  file_coverage.csv  metric_crosswalk.csv  org_summary.csv  quotes.csv  rejected_samples.csv  timeline.csv
OVERVIEW/data/raw/: AP1_April_2023_SA__Knowledge___Behaviour.csv  AP1_April_2025_Short_Beneficiary_Survey.csv  AP1_April_23_Org_Performance_SA.csv  AP1_Baseline_Nov_22_SA.csv  AP1_Endline_April_24_SA.csv  AP1_June_2024_BRA.csv  AP1_October_2023_BRA.csv  AP1_October_2023_SA.csv  AP1_October_2024_SA_BR.csv  AP1and2_April_25.csv  AP2_Baseline_October_2023.csv  AP2_March_2024.csv  AP2_October_2024.csv  AP3_April_2025_Midline.csv  AP3_Baseline_October_2024.csv  AP4_2025_2026_Baseline_Survey.csv  AP4_May_2026_Midline.csv  AP_April_2025_extra_data.csv  IMM_Assessment_October_2025.csv  README.md
OVERVIEW/pipeline/: build_timeline.py  config.py  entity_resolution.py  metric_mapping.py  qualitative.py
backend/: .env.example  .gitignore  pyproject.toml
backend/src/ysi/: config.py  model_config.py  persistence.py  sandbox.py  schemas.py
backend/src/ysi/agents/: analyze_agent.py  clean_agent.py  portrait_agent.py
backend/src/ysi/api/: main.py
ui/: .env  .env.example  README.md  index.html  package.json
ui/src/app/: App.tsx
ui/src/app/components/: ChatPanel.tsx  CompanyPanel.tsx  PortraitScreen.tsx  (+1 more)
ui/src/lib/: api.ts  markdown.ts
ui/src/styles/: fonts.css  theme.css
(+4 files in other folders)
