[project]
name = "ysi-impact"
version = "0.1.0"
description = "Agent-driven impact intelligence: clean + analyze agents over messy programme data"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2",
    "duckdb>=1.1",
    "rapidfuzz>=3.9",
    "anthropic>=0.40",
    "openai>=1.50",
    "pydantic-ai>=0.0.30",
    "python-dotenv>=1.0",
    "pydantic>=2.9",
    "fastapi>=0.115",
    "uvicorn>=0.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ysi"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
